--- a/Javascriptproject-menu/IntergalacticWar/index.html
+++ b/Javascriptproject-menu/IntergalacticWar/index.html
@@ -107,7 +107,7 @@
 <p class="about-content">The UFO will move randomly from left to right to shoot you.  your job is to dodge fire from UFOs and shoot UFOs back with unlimited bullets you have.  Every time you shoot a UFO, your score will increase by 1 point.  every time your score reaches multiples of 5 (5,10,15,20,..), the movement of the bullets from the UFO will be faster and increase the possibility for you to lose.  Your life will be reduced by 25% every time you are shot by a UFO.  However, if you get too close to the UFO, you will immediately lose.</p> 
 
 <p class="about-title">How To Play?</p>
-<p class="about-content">Controlling using keyboard is not working properly right now. but if you still want to try it, use arrow keys for moving and spacebar for shooting. if you are using a smartphone, you can only control the spaceship using the buttons I have given on this web page.</p>
+<p class="about-content">if you use a computer/laptop, you can control the movement of the spaceship by using the arrow keys on the keyboard and fire bullets using the space bar. if you are using a smartphone, you can only control the spaceship using the buttons I have given on this web page.</p>
 <center><img width="300px" src="Images/example-image.png" alt="image-button" /></center>
 <div class="little">Control Button for Spaceship</div>
       </div>
