--- a/Javascriptproject-menu/IntergalacticWar/index.html
+++ b/Javascriptproject-menu/IntergalacticWar/index.html
@@ -49,9 +49,9 @@
 	<h1 align="center">Intergalactic War</h1> 
 	<div class="canvas">
 	  <div class="ufo">
-	    <img src="images/ufo.png" height="45px" width="50px" alt="ufo" />
+	    <img src="Images/ufo.png" height="45px" width="50px" alt="ufo" />
 	  </div>
-	  <div class="spaceship"><img src="images/spaceship.png" height="45px" width="50px" alt="spaceship" /></div> 
+	  <div class="spaceship"><img src="Images/spaceship.png" height="45px" width="50px" alt="spaceship" /></div> 
 	</div>
 	<div class="score">
 	    Score : 0
