--- a/Contact-me.html
+++ b/Contact-me.html
@@ -45,5 +45,31 @@
 <div class="item"><a href="mailto: fikrimulyanasetiawan@gmail.com"><img src="https://img.icons8.com/color/48/000000/gmail--v1.png"/></a></div>
 </div>
 </div>
+
+<div class="footer">
+  <div class="tabel">
+    <table border="0">
+      <tr>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../index.html">Homepage</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Contact-me.html">Contact</a></td>
+      </tr>
+      <tr>
+        <td class="link"><a class="text-decoration-none text-reset" href="../index.html">Javascript Project</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../TermOfUse.html">Terms Of Use</a></td>
+      </tr>
+      <tr>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Physics_menu.html">Physics Blog</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Math-menu.html">Mathematics Blog</a></td>
+      </tr>
+      <tr>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Computer Science Blog</a></td>
+      </tr>
+    </table>
+  </div>
+  <div class="copyright">
+    <div><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" alt="DMCA.com Protection Status" /></a></div>
+    <div>copyright &copy; Fikri Mulyana Setiawan</div>
+  </div>
+</div>
 </body>
 </html>
