--- a/Contact-me.html
+++ b/Contact-me.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,17 +27,17 @@
 <hr />
 <form action="https://formspree.io/xwkrjkdj" method="POST">
   <div class="form-group">
-    <label for="exampleInputEmail1">Alamat Email:</label>
+    <label for="exampleInputEmail1">Email Address:</label>
     <input required type="email" name="replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">Pesan Anda:</label>
+    <label for="exampleFormControlTextarea1"> Your Message:</label>
     <textarea required class="form-control" id="exampleFormControlTextarea1" name="message" rows="5"></textarea>
   </div>
   <!-- your other form fields go here -->
-  <button type="submit" type="button" class="btn btn-outline-success">Kirim Pesan</button>
+  <button type="submit" type="button" class="btn btn-outline-success">Send</button>
   </form> <br />
-  <div class="sosmed">Sosial Media:</div>
+  <div class="sosmed">Social Media:</div>
 <div class="logososmed">
 <div class="item"><a href="https://instagram.com/fikrimulyana_s"><img src="https://img.icons8.com/color/48/000000/instagram-new.png"/></a></div>
 <div class="item"><a href="https://wa.me/+6282392067708"><img src="https://img.icons8.com/color/48/000000/whatsapp.png"/></a></div>
