--- a/index.html
+++ b/index.html
@@ -340,9 +340,8 @@
   <h2 class="title" align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
-  <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa, web developer, dan programmer. Ia sangat antusias ketika menemukan hal yang menantang, seperti teka-teki, dan tentu saja subjek matematika dan fisika. Ia sekarang duduk di bangku SMA kelas XII. Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic), javascript(basic), dan juga python (intermediate). selain seorang programmer, fikri juga seorang fisikawan.</b></em></p>
-  
-  
+  <p id="keterangan" align="justify"><em><b>Fikri Mulyana Setiawan adalah seorang progammer dan front-end Developer. Saya senang mengotomatisasi segala sesuatu dengan kemampuan programming yang saya miliki. sebagai seorang programmer, bahasa utama yang saya kuasai adalah Python. Sebagai seorang web-developer, aya menguasai HTML, CSS, Bootstrap dan JavaScript. Jika tertarik, anda dapat melihat seluruh project yang saya kerjakan di website ini dan repository github saya. </em></p>
+
   <div class="footer">
     <div class="tabel">
       <table border="0">
