--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
   <!-- Primary Meta Tags -->
 <title>Fikri Notes - Thought And Ideas Of Fikri Mulyana Setiawan</title>
 <meta name="title" content="Fikri Notes - Though And Ideas Of Fikri Mulyana Setiawan">
-<meta name="description" content="Math, science and technology.  all you can see here.  let's dive into science">
+<meta name="description" content="Fikri Mulyana Setiawan is a programmer and front-end developer, and I like to automate everything with my programming skills.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://fikrinotes.netlify.app/">
 <meta property="og:title" content="Fikri Notes - Thought And Ideas Of Fikri Mulyana Setiawan ">
-<meta property="og:description" content="Math, science and technology.  all you can see here.  let's dive into science">
+<meta property="og:description" content="Fikri Mulyana Setiawan is a programmer and front-end developer, and I like to automate everything with my programming skills.">
 <meta property="og:image" content="https://fikrinotes.netlify.app/metaTag.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://fikrinotes.netlify.app/">
 <meta property="twitter:title" content="Fikri Notes - Thought And Ideas Of Fikri Mulyana Setiawan">
-<meta property="twitter:description" content="Math, science and technology.  all you can see here.  let's dive into science">
+<meta property="twitter:description" content="Fikri Mulyana Setiawan is a programmer and front-end developer, and I like to automate everything with my programming skills.">
 <meta property="twitter:image" content="https://fikrinotes.netlify.app/metaTag.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Coda&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
