--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
   <h2 class="title" align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
-  <div class="capt"><p id="keterangan" align="justify"><em><b>Fikri Mulyana Setiawan adalah seorang progammer dan front-end Developer. Saya senang mengotomatisasi segala sesuatu dengan kemampuan programming yang saya miliki. sebagai seorang programmer, bahasa utama yang saya kuasai adalah Python. Sebagai seorang web-developer, aya menguasai HTML, CSS, Bootstrap dan JavaScript. Jika tertarik, anda dapat melihat seluruh project yang saya kerjakan di website ini dan repository github saya. </em></p></div>
+  <div class="capt"><p id="keterangan" align="justify"><em><b>Hi! i am Fikri Mulyana Setiawan, a software developer. Currently studying math at Andalas University, Indonesia. love to build anything using computing power </em></p></div>
 
   <div class="footer">
     <div class="tabel">
