--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
   <h2 class="title" align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
-  <div class="capt"><p id="keterangan" align="center"><em><b>Hi! i am Fikri Mulyana Setiawan, a software developer. Currently studying math at Andalas University, Indonesia. love to build anything using computing power </em></p></div>
+  <div class="capt"><p id="keterangan" align="center"><em><b>Hi! i am Fikri Mulyana Setiawan, a software developer. Currently studying math at Andalas University, Indonesia. Love to build anything using computing power </em></p></div>
 
   <div class="footer">
     <div class="tabel">
