--- a/eid-app/index.html
+++ b/eid-app/index.html
@@ -33,6 +33,6 @@
         <button type="button" onclick="push_button()"> <span id="loading" class=""></span> Buat Pesan</button>
     </form>
 
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
