--- a/eid-app/response.html
+++ b/eid-app/response.html
@@ -24,6 +24,6 @@
     <div id="heading"></div>
     <div id="message"></div>
 
-    <script src="/scripts/script-response.js"></script>
+    <script src="scripts/script-response.js"></script>
 </body>
 </html>
