--- a/eid-app/response.html
+++ b/eid-app/response.html
@@ -24,6 +24,7 @@
     <div id="heading"></div>
     <div id="message"></div>
 
+    <div id="ad"><a href="https://fikrinotes.github.io/eid-app">*Ingin Buat Kartu Ucapan Seperti Ini?</a></div>
     <script src="scripts/script-response.js"></script>
 </body>
 </html>
