--- a/eid-app/index.html
+++ b/eid-app/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../logo_fix.png" height=250px>
     <title>Kartu Ucapan Lebaran Digital - A Project of Fikri Mulyana S</title>
+    <meta name="theme-color" content="#865b29"/>
 
     <meta name="title" content="Kartu Ucapan Lebaran Digital - A Project of Fikri Mulyana S">
     <meta name="description" content="Sampaikan Harapan dan Do'a Anda untuk Orang yang Anda Sayangi">
