--- a/eid-app/response.html
+++ b/eid-app/response.html
@@ -44,6 +44,6 @@
     <div id="message"></div>
 
     <div id="ad"><a href="https://fikrinotes.github.io/eid-app">*Ingin Buat Kartu Ucapan Seperti Ini?</a></div>
-    <script src="scripts/script-response.js"></script>
+    <script src="scripts/script-response-adha.js"></script>
 </body>
 </html>
