--- a/Javascriptproject-menu/eid-game/index.html
+++ b/Javascriptproject-menu/eid-game/index.html
@@ -19,7 +19,7 @@
         <p id="finalScore">Skor anda : 40</p>
 
         <div id="restart">
-            <a href="/index.html" type="button">Ulangi Game</a>
+            <a href="javascriptproject-menu/eid-game/" type="button">Ulangi Game</a>
         </div>
     </div>
 
