--- a/Javascriptproject-menu/eid-game/index.html
+++ b/Javascriptproject-menu/eid-game/index.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script data-ad-client="ca-pub-4239518651987758" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T9QDCNTY1F"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-T9QDCNTY1F');
+    </script>
+    <link rel="icon" href="../../logo_fix.png" height=250px>
+    <meta name="theme-color" content="#001f3f"/>
+    <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
+    <title>Eid Blessing Hunter - Berburu THR dan Cookies - A Game By Fikri Mulyana Setiawan</title>
+    <meta name="title" content="Eid Blessing Hunter - Fikri Notes">
+    <meta name="description" content="Game ini merupakan bagian dari project tahunan yang dikerjakan oleh Fikri Mulyana Setiawan dalam rangka memeriahkan hari raya idul fitri setiap tahunnya.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fikrinotes.netlify.app/">
+    <meta property="og:title" content="Eid Blessing Hunter - Fikri Notes">
+    <meta property="og:description" content="Game ini merupakan bagian dari project tahunan yang dikerjakan oleh Fikri Mulyana Setiawan dalam rangka memeriahkan hari raya idul fitri setiap tahunnya.">
+    <meta property="og:image" content="https://fikrinotes.netlify.app/metaTag.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://fikrinotes.netlify.app/">
+    <meta property="twitter:title" content="Eid Blessing Hunter - Fikri Notes">
+    <meta property="twitter:description" content="Game ini merupakan bagian dari project tahunan yang dikerjakan oleh Fikri Mulyana Setiawan dalam rangka memeriahkan hari raya idul fitri setiap tahunnya.">
+    <meta property="twitter:image" content="https://fikrinotes.netlify.app/metaTag.jpg">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eid Blessing Hunter</title>
